Fix/align items on search form

--- a/news-explorer-frontend/src/components/Main/Main.css
+++ b/news-explorer-frontend/src/components/Main/Main.css
@@ -5,48 +5,45 @@
   flex-direction: column;
   text-align: left;
   color: white;
-  /* height: auto; */
 }
 
 .main__title {
-  /* font-size: 48px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  flex-wrap: wrap; */
   max-width: 608px;
   width: 100%;
-  /* margin: 80px auto 32px; */
   font-size: 60px;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-weight: 400;
+  line-height: 64px;
   color: white;
+  padding: 80px 0 32px;
+  margin: 0;
 }
 
 .main__subtitle {
   max-width: 608px;
   width: 100%;
-  font-size: 18px;
-  /* margin-bottom: 88px; */
   font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-size: 18px;
   font-weight: 400;
+  line-height: 24px;
   color: white;
+  margin: 0;
+  padding-bottom: 88px;
 }
 
 @media (max-width: 768px) {
   .main__title {
     max-width: 385px;
     width: 100%;
-    margin-top: 38px;
     font-size: 36px;
-    line-height: 1.2;
+    line-height: 40px;
   }
 
   .main__subtitle {
     max-width: 450px;
     width: 100%;
-    font-size: 18px;
-    margin-top: 16px;
-    margin-bottom: 48px;
+    margin: 0;
+    padding-top: 16px;
   }
 }
 
