--- a/news-explorer-frontend/src/components/SearchForm/SearchForm.css
+++ b/news-explorer-frontend/src/components/SearchForm/SearchForm.css
@@ -6,7 +6,6 @@
   max-width: 608px;
   width: 100%;
   height: 64px;
-  padding-top: 88px;
   padding-bottom: 80px;
 }
 
@@ -49,25 +48,19 @@
 
 @media (max-width: 768px) {
   .search-container {
-    max-width: 450px;
+    max-width: 452px;
     width: 100%;
     height: 56px;
-    /* margin: 48px auto 48px;
-    padding: 0; */
   }
   .search-input {
     font-weight: 400;
-    width: 78%;
     width: 452px;
     height: 56px;
   }
 
   .search-button {
     font-weight: 500;
-    max-width: 168px;
-    width: 100%;
-    left: 60%;
-    margin-right: 10px;
+    height: 56px;
   }
 }
 
@@ -92,19 +85,6 @@
   }
 
   .search-button {
-    /* padding: 15px 50px;
-    font-size: 16px;
-    background-color: #2f71e5;
-    color: white;
-    border: none;
-    border-radius: 25px 25px 25px 25px;
-    max-width: 275px;
-    width: 100%;
-    position: static;
-    /* display: none; */
-    /* font-family: "Roboto", Arial, Helvetica, sans-serif;
-    font-weight: 500; */
-    /* position: unset; */
     width: 285px;
     height: 56px;
   }
